--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,4 +22,6 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        python tests.py SomeTest
+        python tests.py DockerBuildingTests
+        python tests.py DocumentConversionTests
+        python tests.py AudioConversionTests
