--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,6 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests
       run: |
-        python tests.py DockerBuildingTests
-        python tests.py DocumentConversionTests
-        python tests.py AudioConversionTests
+        python tests/tests.py DockerBuildingTests
+        python tests/tests.py DocumentConversionTests
+        python tests/tests.py AudioConversionTests
