--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Build the dockerfile
+      run: docker build . --file Dockerfile --tag freelawproject/binary-transformers-and-extractors:latest
     - name: Run tests
       run: |
-        python tests/tests.py DockerBuildingTests
         python tests/tests.py DocumentConversionTests
         python tests/tests.py AudioConversionTests
