feat(thumbnails): Add thumbnail generation
Bump to version 0.0.4
Add thumbnail generation
Add testing for it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@
 version: '3.7'
 services:
   cl-binary-transformers-and-extractors:
-    image: freelawproject/cl-binary-transformers-and-extractors:latest
+    build: .
+#    image: freelawproject/cl-binary-transformers-and-extractors:latest
     container_name: "cl-binary-transformers-and-extractors"
     expose:
       - "5011"
