--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,3 +26,5 @@ jobs:
       run: |
         python tests/tests.py DocumentConversionTests
         python tests/tests.py AudioConversionTests
+        python tests/tests.py ThumbnailGenerationTests
+        python tests/tests.py PageCountTests
