fix(docker-compose): update image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@
 version: '3.7'
 services:
   cl-binary-transformers-and-extractors:
-    build: .
-#    image: freelawproject/cl-binary-transformers-and-extractors:latest
+    image: freelawproject/binary-transformers-and-extractors:latest
     container_name: "cl-binary-transformers-and-extractors"
     expose:
       - "5011"
