--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,3 +28,4 @@ jobs:
         python tests/tests.py AudioConversionTests
         python tests/tests.py ThumbnailGenerationTests
         python tests/tests.py PageCountTests
+        python tests/tests.py FinancialDisclosureTests
