fix(nginx): Increase timeout read time to 3600s

--- a/server-conf/flask-site-nginx.conf
+++ b/server-conf/flask-site-nginx.conf
@@ -4,6 +4,8 @@ server {
     }
     location @yourapplication {
         include uwsgi_params;
+        uwsgi_read_timeout 3665s;
+        uwsgi_send_timeout 3665s;
         uwsgi_pass unix:///tmp/uwsgi.sock;
     }
 }
