--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 
 version: '3.7'
+volumes:
+  cl-seal-rookery:
 services:
+  cl-seal-rookery:
+    image: freelawproject/seal-rookery:latest
+    container_name: "cl-seal-rookery"
+    volumes:
+      - cl-seal-rookery:/usr/local/lib/python2.7/site-packages/seal_rookery
+
   cl-binary-transformers-and-extractors:
     image: freelawproject/binary-transformers-and-extractors:latest
     container_name: "cl-binary-transformers-and-extractors"
@@ -10,6 +18,11 @@ services:
       - "5011:80"
     networks:
       - cl_net_overlay
+    depends_on:
+      - cl-seal-rookery
+    volumes:
+      - cl-seal-rookery:/usr/local/lib/python3.7/site-packages/seal_rookery
+
 networks:
   cl_net_overlay:
     external: true
