--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Create network overlay
+      run: docker network create cl_net_overlay
     - name: Build the dockerfile
       run: docker build . --file Dockerfile --tag freelawproject/binary-transformers-and-extractors:latest
     - name: Run docker-compose file
-      run: docker-compose up
+      run: docker-compose up --detach
     - name: Run tests
       run: |
         python tests/tests.py DocumentConversionTests
