--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Create network overlay
-      run: docker network create cl_net_overlay
+      run: docker network create -d bridge --attachable cl_net_overlay
     - name: Build the dockerfile
       run: docker build . --file Dockerfile --tag freelawproject/binary-transformers-and-extractors:latest
     - name: Run docker-compose file
