feat(tests.yml): Add UtilityTests to testing action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,3 +29,4 @@ jobs:
         python tests/tests.py ThumbnailGenerationTests
         python tests/tests.py PageCountTests
         python tests/tests.py FinancialDisclosureTests
+        python tests/tests.py UtilityTests
