--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,10 @@ services:
       - bte-seal-rookery
     volumes:
       - bte-seal-rookery:${PYTHON_PACKAGES}/seal_rookery
+    networks:
+      - cl_net_overlay
+
+networks:
+    cl_net_overlay:
+        driver: bridge
+        external: true
