--- a/server-conf/flask-site-nginx.conf
+++ b/server-conf/flask-site-nginx.conf
@@ -11,4 +11,41 @@ server {
         uwsgi_read_timeout 7200s;
         uwsgi_send_timeout 7200s;
     }
+
+    error_page 400 /400.json;
+    location /400.json {
+        root /var/www/json;
+    }
+    error_page 401 /401.json;
+    location /401.json {
+        root /var/www/json;
+    }
+    error_page 404 /404.json;
+    location /404.json {
+        root /var/www/json;
+    }
+    error_page 408 /408.json;
+    location /408.json {
+        root /var/www/json;
+    }
+    error_page 418 /418.json;
+    location /418.json {
+        root /var/www/json;
+    }
+    error_page 422 /422.json;
+    location /422.json {
+        root /var/www/json;
+    }
+    error_page 500 /500.json;
+    location /500.json {
+        root /var/www/json;
+    }
+    error_page 502 /502.json;
+    location /502.json {
+        root /var/www/json;
+    }
+    error_page 504 /504.json;
+    location /504.json {
+        root /var/www/json;
+    }
 }
