--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -1,7 +1,7 @@
 boto3==1.9.38
-certifi==2020.6.20
+certifi
 chardet==3.0.4
-disclosure-extractor==0.0.49
+disclosure-extractor==0.0.51
 eyed3
 flask
 ipython
@@ -14,6 +14,7 @@ numpy==1.19.1
 opencv-python==4.2.0.32
 pandas==1.1.1
 pdf2image==1.7.1
+pdfplumber
 Pillow==8.0.1
 pkginfo==1.5.0.1
 PyPDF2==1.26.0
