--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -1,7 +1,7 @@
 boto3==1.9.38
 certifi
 chardet==3.0.4
-disclosure-extractor==0.0.52
+disclosure-extractor==0.0.54
 eyed3
 flask
 ipython
@@ -20,6 +20,7 @@ pkginfo==1.5.0.1
 PyPDF2==1.26.0
 pytesseract==0.3.5
 requests==2.25.0
+seal-rookery
 sentry-sdk[flask]
 six==1.15.0
 urllib3==1.25.10
