refactor(bte): Create new version of BTE
Rewrite the project to be cleaner faster
and have better tests

Strip out disclosures and finish
adding functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
-coverage
-disclosure-extractor==0.0.52
-docker
-eyed3
-pytest
+Django==3.2.6
+gunicorn==20.1.0
+PyPDF2
+Pillow
 requests
+pdf2image
+boto3>=1.9.38
+certifi
+chardet>=3.0.4
+eyed3
+flask
+ipython
+python-magic
+idna==2.10
+img2pdf
+lxml>=4.5.2
+numpy>=1.19.1
+opencv-python>=4.2.0.32
+pandas>=1.1.1
+pdf2image>=1.7.1
+pdfplumber
+Pillow>=8.0.1
+pkginfo==1.5.0.1
+PyPDF2>=1.26.0
+pytesseract>=0.3.5
+requests>=2.25.0
 sentry-sdk[flask]
+six>=1.15.0
+urllib3>=1.25.10
+uwsgi
