--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,32 @@
-version: '3.7'
-
-volumes:
-  bte-seal-rookery:
+version: '3.8'
 
 services:
-  bte-seal-rookery:
-    image: freelawproject/seal-rookery:latest
-    container_name: "bte-seal-rookery"
-    volumes:
-      - bte-seal-rookery:${PYTHON_PACKAGES}/seal_rookery
-
-  bte-binary-transformers-and-extractors:
-    image: freelawproject/binary-transformers-and-extractors:latest
-    container_name: "bte-binary-transformers-and-extractors"
-    ports:
-      - "5051:5050"
-    depends_on:
-      - bte-seal-rookery
-    volumes:
-      - bte-seal-rookery:${PYTHON_PACKAGES}/seal_rookery
+  bte:
+    container_name: bte
+    build: .
+    image: freelawproject/bte
     networks:
       - cl_net_overlay
-    cpuset: "0-7"
+    volumes:
+      - cl-seal-rookery:${PYTHON_PACKAGES}/seal_rookery
+    depends_on:
+      - mock-seal-rookery
+    ports:
+      - "5050:5050"
+
+  mock-seal-rookery:
+    image: freelawproject/seal-rookery:latest
+    container_name: "mock-seal-rookery"
+    volumes:
+      - cl-seal-rookery:${PYTHON_PACKAGES}/seal_rookery
+    deploy:
+      restart_policy:
+        condition: none
 
 networks:
-    cl_net_overlay:
-        driver: bridge
-        external: true
+  cl_net_overlay:
+    driver: bridge
+    external: true
+
+volumes:
+  cl-seal-rookery:
