refactor(bte): Cleanup directories
Add versions
Add Makefile
Add developing.md
Update readme.md

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,9 @@ version: '3.8'
 services:
   bte:
     container_name: bte
-    build: .
+    build:
+      dockerfile: docker/Dockerfile
+      context: .
     image: freelawproject/bte
     networks:
       - cl_net_overlay
