refactor(doctor): Rename BTE to Doctor

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,22 +1,22 @@
 version: '3.8'
 
 services:
-  bte:
-    container_name: bte
+  doctor:
+    container_name: doctor
     build:
       dockerfile: docker/Dockerfile
       context: .
-    image: freelawproject/bte
+    image: freelawproject/doctor
     networks:
       - cl_net_overlay
 
   mock_courtlistener:
-    container_name: mock_courtlistener
-    image: freelawproject/bte
+    container_name: mock_cl_doctor
+    image: freelawproject/doctor
     networks:
       - cl_net_overlay
     depends_on:
-      - bte
+      - doctor
 
 networks:
   cl_net_overlay:
