--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,4 +18,9 @@ server {
     client_max_body_size        100M;
     client_body_buffer_size     100M;
 
+    # Increase the timeout for nginx.
+    proxy_read_timeout 300;
+    proxy_connect_timeout 3600;
+    proxy_send_timeout 300;
+
 }
