feat(nginx): Match CL container pattern

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  doctor:
-    container_name: doctor
+  cl-doctor:
+    container_name: cl-doctor
     build:
       dockerfile: docker/Dockerfile
       context: .
