--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  doctor:
-    container_name: doctor
+  cl-doctor:
+    container_name: cl-doctor
     build:
       dockerfile: docker/Dockerfile
       context: .
@@ -16,7 +16,7 @@ services:
     networks:
       - cl_net_overlay
     depends_on:
-      - doctor
+      - cl-doctor
 
 networks:
   cl_net_overlay:
