--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream doctor {
+upstream cl-doctor {
     server 127.0.0.1:8000;
 }
 
@@ -7,7 +7,7 @@ server {
     listen 5050;
 
     location / {
-        proxy_pass http://doctor;
+        proxy_pass http://cl-doctor;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
