feat(dockerfile): Expose 5050
Remove from compose file port to
simplify process for CL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,4 @@ services:
     build:
       dockerfile: docker/Dockerfile
       context: .
-    image: freelawproject/doctor
-    ports:
-      - "5050:5050"
+    image: freelawproject/doctor:latest
