--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,13 +6,13 @@ services:
     build:
       dockerfile: docker/Dockerfile
       context: .
-    image: freelawproject/doctor
+    image: freelawproject/doctor:latest
     networks:
       - cl_net_overlay
 
   mock_courtlistener:
     container_name: mock_cl_doctor
-    image: freelawproject/doctor
+    image: freelawproject/doctor:latest
     networks:
       - cl_net_overlay
     depends_on:
