fix(dockerfiles): Update seals properly
Add test for page count

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,6 +26,7 @@ RUN apt-get update --option "Acquire::Retries=3" --quiet=2 && \
         libffi-dev libxml2-dev libxslt-dev python-dev
 
 RUN pip install seal_rookery
+RUN update-seals -f
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
