feat(views): Version Bump
Add mime and extension extraction
From buffer and not files
Add tests
Black lint fix

Drop nginx
Update streamline Dockerfiles

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,12 @@
 FROM python:3.10-slim
 
-RUN apt-get update
-RUN apt-get install -y curl python3-pip poppler-utils \
-    wget unzip bc vim python3-pip libleptonica-dev git \
-    tesseract-ocr libtesseract-dev nginx
-
-RUN apt-get install -y --no-install-recommends \
-        libatlas-base-dev gfortran supervisor libpcre3 libpcre3-dev \
-        g++ libz-dev libjpeg-dev build-essential make
-
 RUN apt-get update --option "Acquire::Retries=3" --quiet=2 && \
     apt-get install -y --no-install-recommends apt-utils && \
+    apt-get install -y python3-pip poppler-utils \
+    wget unzip bc vim python3-pip libleptonica-dev git \
+    tesseract-ocr libtesseract-dev \
+    libatlas-base-dev gfortran supervisor libpcre3 libpcre3-dev \
+    g++ libz-dev libjpeg-dev build-essential make && \
     apt-get install \
         --option "Acquire::Retries=3" \
         --no-install-recommends \
@@ -32,7 +28,6 @@ RUN update-seals -f
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
@@ -40,9 +35,8 @@ COPY doctor /opt/app/doctor
 COPY manage.py /opt/app/
 WORKDIR /opt/app
 
-COPY nginx/nginx.conf /etc/nginx/conf.d
-
 COPY docker/docker-entrypoint.sh /opt/app/
 EXPOSE 5050
 RUN ["chmod", "+x", "/opt/app/docker-entrypoint.sh"]
 ENTRYPOINT ["/opt/app/docker-entrypoint.sh"]
+
