--- a/docker/Dockerfile.m1
+++ b/docker/Dockerfile.m1
@@ -1,21 +1,12 @@
 FROM python:3.10-slim
 
-RUN apt-get update
-RUN apt-get install -y curl python3-pip poppler-utils \
-    wget unzip bc vim python3-pip libleptonica-dev git \
-    tesseract-ocr libtesseract-dev nginx
-
-RUN apt-get install -y --no-install-recommends \
-        libatlas-base-dev gfortran supervisor libpcre3 libpcre3-dev \
-        g++ libz-dev libjpeg-dev build-essential make
-
-#Install QPDF
-COPY docker/install-qpdf.sh /opt/
-RUN ["chmod", "+x", "/opt/install-qpdf.sh"]
-RUN /opt/install-qpdf.sh
-
 RUN apt-get update --option "Acquire::Retries=3" --quiet=2 && \
     apt-get install -y --no-install-recommends apt-utils && \
+    apt-get install -y python3-pip poppler-utils \
+    wget unzip bc vim python3-pip libleptonica-dev git \
+    tesseract-ocr libtesseract-dev \
+    libatlas-base-dev gfortran supervisor libpcre3 libpcre3-dev \
+    g++ libz-dev libjpeg-dev build-essential make && \
     apt-get install \
         --option "Acquire::Retries=3" \
         --no-install-recommends \
@@ -30,6 +21,11 @@ RUN apt-get update --option "Acquire::Retries=3" --quiet=2 && \
         `# Other dependencies` \
         libffi-dev libxml2-dev libxslt-dev python-dev
 
+#Install QPDF
+COPY docker/install-qpdf.sh /opt/
+RUN ["chmod", "+x", "/opt/install-qpdf.sh"]
+RUN /opt/install-qpdf.sh
+
 RUN pip install seal_rookery
 RUN update-seals -f
 
@@ -37,15 +33,12 @@ RUN update-seals -f
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 COPY doctor /opt/app/doctor
 COPY manage.py /opt/app/
 WORKDIR /opt/app
-
-COPY nginx/nginx.conf /etc/nginx/conf.d
 
 COPY docker/docker-entrypoint.sh /opt/app/
 EXPOSE 5050
