feat(cd): Land continuous deployment

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,12 +1,15 @@
-# Run with make push --file docker/Makefile
+# Run with make push --file docker/Makefile -e VERSION=$(git rev-parse --short HEAD)
 # Note that makefiles differentiate between tabs and spaces in a weird way!
+
+# Ensure VERSION is set.
+ifndef VERSION
+$(error VERSION variable is not set. Use -e VERSION=XYZ to proceed.)
+endif
 
 DOCKER_REPOSITORY ?= freelawproject/doctor
 
 DOCKER ?= docker
 export DOCKER
-
-DOCKER_TAG = $(shell head -1 docker/version.txt)
 
 .PHONY: all image push multiarch_push multiarch_image
 
@@ -15,13 +18,13 @@ UNAME := $(shell uname -m)
 all: image
 
 image:
-	$(DOCKER) build -t $(DOCKER_REPOSITORY):$(DOCKER_TAG) -t $(DOCKER_REPOSITORY):latest --file docker/Dockerfile .
+	$(DOCKER) build -t $(DOCKER_REPOSITORY):$(VERSION) -t $(DOCKER_REPOSITORY):latest --file docker/Dockerfile .
 
 push: image
 	$(info Checking if valid architecture)
 	@if [ $(UNAME) = "x86_64" ]; then \
 		echo "Architecture is OK. Pushing.";\
-		$(DOCKER) push $(DOCKER_REPOSITORY):$(DOCKER_TAG);\
+		$(DOCKER) push $(DOCKER_REPOSITORY):$(VERSION);\
         $(DOCKER) push $(DOCKER_REPOSITORY):latest;\
 	else \
 		echo "Only arm64 machines can push single-architecture builds. If you want to \
@@ -33,13 +36,13 @@ multiarch_image:
 	export DOCKER_CLI_EXPERIMENTAL=enabled
 	$(DOCKER) buildx rm
 	$(DOCKER) buildx create --use --name flp-builder
-	$(DOCKER) buildx build --platform linux/amd64,linux/arm64 -t $(DOCKER_REPOSITORY):latest -t $(DOCKER_REPOSITORY):$(DOCKER_TAG) --file docker/Dockerfile .
+	$(DOCKER) buildx build --platform linux/amd64,linux/arm64 -t $(DOCKER_REPOSITORY):latest -t $(DOCKER_REPOSITORY):$(VERSION) --file docker/Dockerfile .
 
 multiarch_push: multiarch_image
-	$(DOCKER) buildx build --push --platform linux/amd64,linux/arm64 -t $(DOCKER_REPOSITORY):latest -t $(DOCKER_REPOSITORY):$(DOCKER_TAG) --file docker/Dockerfile .
+	$(DOCKER) buildx build --push --platform linux/amd64,linux/arm64 -t $(DOCKER_REPOSITORY):latest -t $(DOCKER_REPOSITORY):$(VERSION) --file docker/Dockerfile .
 
 x86_push:
 	export DOCKER_CLI_EXPERIMENTAL=enabled
 	$(DOCKER) buildx rm
 	$(DOCKER) buildx create --use --name flp-builder
-	$(DOCKER) buildx build --push --platform linux/amd64 -t $(DOCKER_REPOSITORY):latest -t $(DOCKER_REPOSITORY):$(DOCKER_TAG) --file docker/Dockerfile .
+	$(DOCKER) buildx build --push --platform linux/amd64 -t $(DOCKER_REPOSITORY):latest -t $(DOCKER_REPOSITORY):$(VERSION) --file docker/Dockerfile .
