--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,9 @@ pkginfo==1.5.0.1
 PyPDF2>=1.26.0
 pytesseract>=0.3.5
 requests>=2.25.0
-sentry-sdk[flask]
 six>=1.15.0
 urllib3>=1.25.10
 reportlab
 seal-rookery>=2.2.1
+sentry-sdk
+django-environ>=0.8.1
