--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==3.2.6
 gunicorn==20.1.0
-PyPDF2
+PyPDF2[crypto]
 Pillow
 requests
 pdf2image
@@ -19,7 +19,6 @@ pdf2image>=1.7.1
 pdfplumber
 Pillow>=8.0.1
 pkginfo==1.5.0.1
-PyPDF2>=1.26.0
 pytesseract>=0.3.5
 requests>=2.25.0
 six>=1.15.0
