--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Create docker network
-      run: docker network create -d bridge --attachable cl_net_overlay
     - name: Build Image
       run: docker-compose -f docker-compose.dev.yml up --build -d
     - name: Run tests
-      run: docker exec mock_cl_doctor python3 -m unittest doctor.tests
+      run: docker exec mock_web_app python3 -m unittest doctor.tests
