--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,25 +1,15 @@
 version: '3.8'
 
 services:
-  cl-doctor:
-    container_name: cl-doctor
+  doctor:
+    container_name: doctor
     build:
       dockerfile: docker/Dockerfile
       context: .
     image: freelawproject/doctor:latest
-    networks:
-      - cl_net_overlay
 
-  mock_cl_doctor:
-    container_name: mock_cl_doctor
+  mock_web_app:
+    container_name: mock_web_app
     image: freelawproject/doctor:latest
-    networks:
-      - cl_net_overlay
     depends_on:
-      - cl-doctor
-
-networks:
-  cl_net_overlay:
-    driver: bridge
-    external: true
-
+      - doctor
