--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,12 @@
 name: Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - '**'
+  pull_requests:
+    branches:
+      - 'main'
 
 jobs:
   build:
