--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,10 +6,20 @@ services:
     build:
       dockerfile: docker/Dockerfile
       context: .
+      args:
+        options: --reload
     image: freelawproject/doctor:latest
+
+
 
   mock_web_app:
     container_name: mock_web_app
     image: freelawproject/doctor:latest
     depends_on:
       - doctor
+    ports:
+      - "5050:5050"
+    volumes:
+      - .:/opt/app
+    env_file:
+      - .env.dev
