--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,5 +14,4 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-      - name: Black Code Formatter
-        uses: psf/black@stable
+      - uses: pre-commit/action@v3.0.0
